--- a/synapsis/src/main/resources/templates/pages/editJob.html
+++ b/synapsis/src/main/resources/templates/pages/editJob.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="_layout">
 <div layout:fragment="content">
 
+  <div class="langEN">
   <form th:action="@{/editjob}" method="post">
 
     <input type="hidden" name="jobId" th:value="${jobId}" />
@@ -83,6 +84,91 @@
     </div>
 
   </form>
+  </div>
+
+  <div class="langFR">
+    <form th:action="@{/editjob}" method="post">
+
+      <input type="hidden" name="jobId" th:value="${jobId}" />
+
+      <p th:if="${error}" th:text="${error}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative"></p>
+
+      <div class="flex flex-col border p-8  mx-auto mt-10 shadow-xl w-1/2 mb-20 rounded-xl">
+
+        <div class="mb-4">
+          <img src="../../assets/synapsis_logo.svg" class="object-contain h-12 w-12" alt="Synapsis Logo">
+        </div>
+
+        <p class="font-thin text-3xl m-2 text-center text-black-variant">Modifier le travail</p>
+        <label for="position" class="font-thin text-grey font-serif">Poste</label>
+        <input id="position" name="position" th:value="${position}"
+               class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-light"
+               required/>
+        <label for="address" class="font-thin text-grey font-serif mt-4">Adresse</label>
+        <input id="address" name="address" th:value="${address}"
+               class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-light"
+               required/>
+        <label for="description" class="font-thin text-grey font-serif mt-4">Description</label>
+        <textarea rows="5" id="description" name="description" th:text="${description}"
+                  class="font-thin font-serif border border-grey p-3 mb-4 content-center rounded-md hover:bg-light"
+                  required></textarea>
+
+        <label for="type" class="font-thin text-grey font-serif">Type d'emploi</label>
+        <select id="type" name="type" class="mt-2 bg-white border text-sm h-14 border-grey
+      text-grey rounded-md focus:border-blue-500 p-3 hover:bg-light" required>
+          <option th:selected="${type.toString() == 'FULLTIME'}" value="FULLTIME">Temps plein</option>
+          <option th:selected="${type.toString() == 'PARTTIME'}" value="PARTTIME">Temps partiel</option>
+          <option th:selected="${type.toString() == 'CONTRACT'}" value="CONTRACT">Contrat</option>
+          <option th:selected="${type.toString() == 'TEMPORARY'}" value="TEMPORARY">Temporaire</option>
+          <option th:selected="${type.toString() == 'VOLUNTEER'}" value="VOLUNTEER">Bénévole</option>
+          <option th:selected="${type.toString() == 'INTERNSHIP'}" value="INTERNSHIP">Stage</option>
+          <option th:selected="${type.toString() == 'OTHER'}" value="OTHER">Autre</option>
+        </select>
+
+        <input id="numAvailable" name="numAvailable" type="number" th:value="${num_available}" min="1" placeholder="Postes disponibles"
+               class="font-thin font-serif border border-grey mt-4 pl-3 h-14 mb-4
+             content-center rounded-md hover:bg-light" required/>
+
+        <div class="border border-grey p-3 rounded-md hover:bg-light">
+          <p class="text-grey font-serif">Indiquez quels documents sont obligatoires pour cette application</p>
+          <fieldset class="font-serif text-grey">
+            <input type="checkbox" name="needResume" id="needResume" th:checked="${need_resume}">
+            <label for="needResume">Résumé</label><br>
+            <input type="checkbox" name= "needCover" id="needCover" th:checked="${need_cover}">
+            <label for="needCover">Lettre de motivation</label><br>
+          </fieldset>
+        </div>
+
+        <div class="border border-grey p-3 mt-4 rounded-md hover:bg-light">
+          <fieldset required>
+            <legend class="font-thin font-serif text-grey">Cette offre d'emploi est-elle affiché ailleurs?</legend>
+            <div>
+              <input th:checked="${is_external}" th:value="${true}" type="radio" name="isExternal" id="external" onclick="EnableLinkBox()"/>
+              <label for="external" class="font-thin font-serif text-grey">Oui (plateforme tierce)</label>
+              <br/>
+
+              <input th:checked="${!is_external}" th:value="${false}" type="radio" name="isExternal" id="internal" onclick="EnableLinkBox()"/>
+              <label for="internal" class="font-thin font-serif text-grey">Non (sur Synapsis)</label>
+            </div>
+
+            <input th:value="${external_link}" id="externalLink" name="externalLink" placeholder="Si oui, entrez le lien vers le site web tiers" class="font-thin font-serif
+                 border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light w-full" disabled />
+          </fieldset>
+        </div>
+
+        <div class="flex mt-3 mx-auto space-x-4">
+          <button type="submit" class="btn btn-primary bg-primary text-base rounded-2xl font-thin
+        hover:bg-opacity-60 p-4 w-32">Sauvegarder
+          </button>
+
+          <a th:href="'job/' + ${jobId}" class="text-white font-thin bg-primary rounded-2xl
+        hover:bg-opacity-60 h-16 px-4 py-[20px] w-24">Annuler</a>
+        </div>
+
+      </div>
+
+    </form>
+  </div>
 
   <script type="text/javascript" th:src="@{/js/createJob.js}"></script>
 
